# gd2t2d-risk

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
api/: Dockerfile  README.md  pyproject.toml
api/assets/: file_structure.md
api/data/processed/: decoded_data.csv
api/data/raw/: gdm_t2dm_risk_dataset.csv
api/notebooks/: 01_eda.ipynb
api/src/: app.py  logger.py  maternity.py
api/src/schemas/: models.py
frontend/: Dockerfile  pyproject.toml  streamlit_app.py
frontend/utils/: metrics.py  visualisations.py
notebooks/: 01_eda.ipynb  02_model_building.ipynb
src/pipeline/: predict.py  train.py
